[package]
name = "cached-eth-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1.0.71"
clap = { version = "4.3.4", features = ["derive"] }
dashmap = { version = "5.5.3", features = ["serde"] }
env_logger = "0.10.0"
hex = "0.4.3"
tracing = "0.1.40"
primitive-types = "0.12.1"
r2d2 = "0.8.10"
redis = { version = "0.24.0", features = ["r2d2", "async-std"] }
reqwest = { version = "0.11.18", features = ["rustls", "json", "serde_json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = { version = "1.0.97", features = ["std"] }
sha1 = "0.10.5"
