[package]
name = "cached-eth-rpc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4"
alloy-primitives = { version = "0.6", features = ["serde"] }
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.4", features = ["derive"] }
dashmap = { version = "6.0", features = ["serde"] }
env_logger = "0.11"
hex = "0.4"
r2d2 = "0.8"
redis = { version = "0.24", features = ["r2d2", "async-std"] }
reqwest = { version = "0.11", features = ["rustls", "json", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["std"] }
sha1 = "0.10"
tracing = "0.1"
