[package]
name = "cached-eth-rpc"
version = "1.0.13"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8"
alloy-primitives = { version = "0.7", features = ["serde"] }
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4.38"
clap = { version = "4.5", features = ["derive"] }
dashmap = { version = "6.0", features = ["serde"] }
env_logger = "0.11"
hex = "0.4"
lazy_static = "1.5.0"
log = "0.4.22"
lru = "0.12.4"
prometheus = "0.13.4"
r2d2 = "0.8"
redis = { version = "0.25", features = ["r2d2", "async-std"] }
reqwest = { version = "0.11", features = ["rustls", "json", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["std"] }
sha1 = "0.10"
tracing = "0.1"
